fix: MetaPanel adjustments (#550)
* rendering HTML in MetaPanel accordions

* minor code cleanup

* only allowing MetaPanel to overlap if hero isn't interactive

* removing autodocs from lesson page stories

--- a/packages/common/src/scss/_grid.scss
+++ b/packages/common/src/scss/_grid.scss
@@ -42,10 +42,6 @@
       grid-column-start: container-start;
     }
 
-    .col-start-indent-col-1 {
-      grid-column-start: indent-col-1;
-    }
-
     .col-start-indent-col-2 {
       grid-column-start: indent-col-2;
     }
